src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail31.jova
class MyClass {


}

class Main {
    public int main() {
       int x;
       int count;
       x = 3;
       count = 0;

       while(x > count) {
            count = count + 1;
       }

      while(x > count) {
           count = count + 1;
      }

      if(x == "true") {
      }

      return 0;
    }
}